tests/ui/issues/issue-46101.stderr
error[E0433]: cannot find derive macro `Anything` in trait `Foo`
  --> $DIR/issue-46101.rs:2:10
   |
LL | #[derive(Foo::Anything)]
   |          ^^^^^^^^^^^^^ a derive macro can't exist within a trait

error[E0433]: cannot find derive macro `Anything` in trait `Foo`
  --> $DIR/issue-46101.rs:2:10
   |
LL | #[derive(Foo::Anything)]
   |          ^^^^^^^^^^^^^ a derive macro can't exist within a trait
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
