tests/ui/issues/issue-46101.rs
trait Foo {}
#[derive(Foo::Anything)] //~ ERROR cannot find
                         //~| ERROR cannot find
struct S;

fn main() {}
